--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,8 @@
             <button type="button" id="limpiar">Limpiar</button>
         </div>
     </form>
-    <script type="module" src="../main.js"></script>
+   
+    <script type="module" src="./main.js"></script>
 </body>
 
 </html>
