terminando el editar y corrigiendo el eliminar

--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
         </div>
         <br>
         <div class="fields">
-            <div>
+            <div id="nombre-div">
                 <label for="nombre">Nombre:</label>
                 <input type="text" id="nombre" required>
             </div>
@@ -40,10 +40,16 @@
                 <input type="text" id="id" name="id" class="form-control">
             </div>
             <br>
-            <div id="carrera-div">
-                <label for="carrera">Carrera:</label>
+            <div id="carreras-div">
+                <label for="carreras">Carrera:</label>
                 <select id="carreras">
-                    <option value="">--Seleccione--</option>
+                    <!-- <option value="">--Seleccione--</option> -->
+                </select>
+            </div>
+            <div id="alumnos-div">
+                <label for="alumnos" id="select-alumnos">Alumnos:</label>
+                <select id="alumnos">
+                    <!-- <option></option> -->
                 </select>
             </div>
         </div>
